--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "http-errors": "^1.7.3",
+    "http-status": "^1.3.2",
     "request": "^2.88.0"
   },
   "devDependencies": {
